# Virtual-Machine

./: README.md
.github/workflows/: ci.yml
vm/: CMakeLists.txt
vm/c_vm/: CMakeLists.txt  README.md
vm/c_vm/examples/: closure.c  closure_test.c  compiler_closure.c  main.c  trycatch.c
vm/c_vm/include/: bytecode.h  disassembler.h  util.h  verifier.h  vm.h
vm/c_vm/src/: bytecode.c  disassembler.c  verifier.c  vm.c
vm/include/: bytecode.h  compiler.h  disassembler.h  verifier.h  vm.h
vm/src/: bytecode.cpp  disassembler.cpp  verifier.cpp  vm.cpp
